Draft #50 implementing Builder